--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,8 +17,9 @@
 
   <section class="sections">
     <ul>
+      <li><a href="{{ "/" | prepend: site.baseurl }}">início</a></li>
       <li><a href="{{ "/about.html" | prepend: site.baseurl }}">sobre</a></li>
-      <li><a href="{{ "/" | prepend: site.baseurl }}">posts</a></li>
+      <li><a href="{{ "/2018.html" | prepend: site.baseurl }}">2018</a></li>
     </ul>
   </section>
 </section>
